--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,15 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# IntelliJ
+.idea
+*.iml
+**/*/*.iml
+out
+
+# Vertx
+.vertx
+
 # Package Files #
 *.jar
 *.war
@@ -20,3 +29,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Others
+target
+*.swp
+.project
+.settings
+.classpath
+**/src/main/conf/config.json
+log
